# audio_parser

./: Cargo.toml
src/: chunk.rs  fmt.rs  lib.rs  wav.rs
src/wav/: chunk.rs  error.rs  fmt.rs
