[package]
name = "audio_parser"
version = "0.2.0"
authors = ["Samuel Leeuwenburg <samleeuwenburg@gmail.com>"]
edition = "2018"
description = "no_std library for parsing and creating wav files"
repository = "https://github.com/LegitCamper/audio_parser"
license = "Apache-2.0"
keywords = ["audio", "wav", "no_std"]

[dependencies]
embedded-sdmmc = "0.8.0"
heapless = "0.8.0"
