[package]
name = "audio_parser"
version = "0.2.0"
authors = ["Samuel Leeuwenburg <samleeuwenburg@gmail.com>"]
edition = "2018"
description = "no_std library for parsing and creating wav files"
repository = "https://github.com/samuelleeuwenburg/wavv"
documentation = "https://docs.rs/wavv"
license = "Apache-2.0"
keywords = ["audio", "wav", "no_std"]

[dependencies]
embedded-sdmmc = { git = "https://github.com/Be-ing/embedded-sdmmc-rs", branch = "bisync" }
heapless = "0.8.0"
